feat: implement match request system with service and routes

--- a/docs/작업-단계별-구현-계획.md
+++ b/docs/작업-단계별-구현-계획.md
@@ -67,33 +67,33 @@
 ## 🔧 Phase 2: 매칭 요청 시스템 TDD (50분)
 
 ### Step 2.1: MatchRequestService TDD (20분)
-- [ ] 테스트 파일 생성 (`matchRequestService.test.ts`)
-- [ ] 핵심 기능 테스트 작성:
-  - [ ] 매칭 요청 생성
-  - [ ] 요청 목록 조회 (incoming/outgoing)
-  - [ ] 요청 수락/거절
-  - [ ] 요청 취소
-  - [ ] 중복 요청 방지
-- [ ] 테스트 실행 (Red)
+- [x] 테스트 파일 생성 (`matchRequestService.test.ts`)
+- [x] 핵심 기능 테스트 작성:
+  - [x] 매칭 요청 생성
+  - [x] 요청 목록 조회 (incoming/outgoing)
+  - [x] 요청 수락/거절
+  - [x] 요청 취소
+  - [x] 중복 요청 방지
+- [x] 테스트 실행 (Red)
 
 ### Step 2.2: MatchRequestService 구현 (15분)
-- [ ] `IMatchRequestService` 인터페이스 정의
-- [ ] `MatchRequestService` 클래스 구현
-- [ ] DI 컨테이너에 등록
-- [ ] 모든 테스트 통과 (Green)
+- [x] `IMatchRequestService` 인터페이스 정의
+- [x] `MatchRequestService` 클래스 구현
+- [x] DI 컨테이너에 등록
+- [x] 모든 테스트 통과 (Green)
 
 ### Step 2.3: API 엔드포인트 구현 (15분)
-- [ ] `POST /api/match-requests` - 매칭 요청 생성
-- [ ] `GET /api/match-requests/incoming` - 받은 요청 목록
-- [ ] `GET /api/match-requests/outgoing` - 보낸 요청 목록
-- [ ] `PUT /api/match-requests/:id/accept` - 요청 수락
-- [ ] `PUT /api/match-requests/:id/reject` - 요청 거절
-- [ ] `DELETE /api/match-requests/:id` - 요청 취소
+- [x] `POST /api/match-requests` - 매칭 요청 생성
+- [x] `GET /api/match-requests/incoming` - 받은 요청 목록
+- [x] `GET /api/match-requests/outgoing` - 보낸 요청 목록
+- [x] `PUT /api/match-requests/:id/accept` - 요청 수락
+- [x] `PUT /api/match-requests/:id/reject` - 요청 거절
+- [x] `DELETE /api/match-requests/:id` - 요청 취소
 
 ### ✅ Phase 2 완료 체크포인트
-- [ ] 모든 매칭 API 테스트 통과
-- [ ] Postman/curl로 API 동작 확인
-- [ ] 비즈니스 로직 정상 동작
+- [x] 모든 매칭 API 테스트 통과
+- [x] Postman/curl로 API 동작 확인
+- [x] 비즈니스 로직 정상 동작
 
 ---
 
@@ -150,7 +150,7 @@
 
 ## 📝 진행 상황 체크
 
-**현재 위치**: Phase 1 완료! ✅
-**다음 단계**: Phase 2 - 매칭 요청 시스템 TDD
+**현재 위치**: Phase 2 완료! ✅  
+**다음 단계**: Phase 3 - 프론트엔드 매칭 UI
 
-**Phase 2, Step 2.1부터 진행을 추천합니다!**
+**Phase 3, Step 3.1부터 진행을 추천합니다!**
